--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,12 @@
     "prefer-stable": true,
     "require-dev": {
         "orchestra/testbench": "^10.1"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "AlboradaIT\\LaravelProgress\\LaravelProgressServiceProvider"
+            ]
+        }
     }
 }
